# hr-ms

./: .env.example  .gitignore  README.md  comp-profile.yaml  company_config.yaml  company_config_schema.json  hr_ms  pyproject.toml  schema.json  test_output.txt
.github/: copilot-instructions.md  html-template-instructions.md  module-creation.md
applications/: factories.py
applications/attendance/: admin.py  apps.py  constants.py  forms.py  managers.py  models.py  selectors.py  services.py  urls.py  views.py
applications/attendance/migrations/: 0001_initial.py
applications/attendance/tests/: conftest.py  test_attendance.py
applications/company_profile/: apps.py  models.py  services.py  urls.py  views.py
applications/company_profile/management/commands/: seed_company_profile.py
applications/company_profile/migrations/: 0001_initial.py
applications/context/: user_decorator.py
applications/contract/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
applications/contract/migrations/: 0001_initial.py
applications/contract/tests/: conftest.py
applications/department/: admin.py  models.py  serializers.py  views.py
applications/department/migrations/: 0001_initial.py
applications/department/tests/: conftest.py
applications/emergency_contact/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
applications/emergency_contact/migrations/: 0001_initial.py
applications/emergency_contact/tests/: conftest.py
applications/employee/: admin.py  apps.py  constants.py  managers.py  models.py  selectors.py  serializers.py  urls.py  views.py
applications/employee/migrations/: 0001_initial.py  0002_alter_emergencycontact_options_and_more.py
applications/employee/tests/: conftest.py  test_employee.py
applications/employment/: admin.py  apps.py  constants.py  forms.py  managers.py  models.py  selectors.py  serializers.py  urls.py  views.py
applications/employment/migrations/: 0001_initial.py  0002_alter_contract_options_alter_employment_options_and_more.py
applications/employment/tests/: conftest.py  test_employment.py
applications/imports/: apps.py  constants.py  managers.py  models.py  selectors.py  services.py  urls.py  views.py
applications/imports/migrations/: 0001_initial.py
applications/job_title/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
applications/job_title/migrations/: 0001_initial.py
applications/job_title/tests/: conftest.py
applications/organization/: admin.py  apps.py  managers.py  models.py  selectors.py  urls.py  views.py
applications/organization/migrations/: 0001_initial.py  0002_alter_department_options_alter_jobtitle_options.py
applications/organization/tests/: test_organization.py
applications/salary/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
applications/salary/migrations/: 0001_initial.py
applications/salary/tests/: conftest.py
assets/css/: app.css  attendance.css
assets/js/: app.js  attendance.js  checkin.js
config/: roles.py  urls.py
config/settings/: base.py  companyconf.py  compconfig.py  databases.py  envcommon.py  factory.py  local.py  production.py
modules/: factories.py
modules/auth/: apps.py  constant.py  permissions.py  serializers.py  views.py
modules/auth/tests/: conftest.py  test_permissions.py  test_serializers.py  test_views.py
modules/user/: admin.py  apps.py  managers.py  models.py
modules/user/migrations/: 0001_initial.py
modules/user/tests/: conftest.py  test_email_normalization.py  test_role_transition.py  test_soft_delete.py  test_superuser_employee_link.py
shared/: base_models.py  monad.py
shared/templatetags/: dict_extras.py
templates/: base.html
templates/attendance/: attendance_list.html  checkin_admin.html  checkin_employee.html  leave_detail.html  leave_form.html  leave_list.html  schedule_list.html
templates/components/: _breadcrumb.html  _messages.html  _navbar.html  _pagination.html  _sidebar.html
templates/employee/: emergencycontact_confirm_delete.html  emergencycontact_form.html  employee_confirm_delete.html  employee_detail.html  employee_form.html  employee_list.html
templates/employment/: contract_confirm_delete.html  contract_form.html  employment_detail.html  employment_form.html  employment_list.html  salary_confirm_delete.html  salary_form.html
templates/layouts/: base.html
templates/organization/: department_confirm_delete.html  department_detail.html  department_form.html  department_list.html  jobtitle_confirm_delete.html  jobtitle_form.html  jobtitle_list.html
templates/pages/attendance/: attendance_confirm_delete.html  attendance_detail.html  attendance_list.html  checkin_admin.html  checkin_admin_self.html  checkin_employee.html  leave_detail.html  leave_form.html  leave_list.html  schedule_detail.html  schedule_form.html  schedule_list.html
templates/pages/employee/: emergencycontact_confirm_delete.html  emergencycontact_form.html  employee_confirm_delete.html  employee_detail.html  employee_form.html  employee_list.html
templates/pages/employment/: contract_confirm_delete.html  contract_form.html  employment_detail.html  employment_form.html  employment_list.html  salary_confirm_delete.html  salary_form.html
templates/pages/organization/: department_confirm_delete.html  department_detail.html  department_form.html  department_list.html  jobtitle_confirm_delete.html  jobtitle_form.html  jobtitle_list.html
templates/pages/registration/: login.html
templates/pages/settings/: bulk_import_create.html  bulk_import_detail.html  bulk_import_list.html  bulk_import_mapping.html  company_profile.html  index.html
templates/registration/: login.html
templates/settings/: bulk_import_create.html  bulk_import_detail.html  bulk_import_list.html  bulk_import_mapping.html  company_profile.html  index.html
tests/: conftest.py
tests/settings/: test_companyconf.py  test_databases.py  test_envcommon.py  test_factory.py
tests/shared/: test_base_models.py  test_monad.py
