[project]
name = "hr-ms"
version = "0.1.0"
description = "HR App for Employee Management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dependency-injector>=4.48.3",
    "django>=6.0.2",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydantic-settings-yaml>=0.2.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "factory-boy>=3.3.3",
    "faker>=40.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.15.0",
]
