[project]
name = "hr-ms"
version = "0.1.0"
description = "HR App for Employee Management"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "dependency-injector>=4.48.3",
    "django>=6.0.2",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydantic-settings-yaml>=0.2.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "factory-boy>=3.3.3",
    "faker>=40.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.0",
]

# ---------------------------------------------------------------------------
# Formatting — Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py314"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | migrations
)/
'''

# ---------------------------------------------------------------------------
# Linting & Formatting — Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py314"
line-length = 88
extend-exclude = ["migrations", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by the formatter
    "B008",  # do not perform function calls in default argument values
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]       # allow non-lowercase test names
"*/migrations/*" = ["E501", "F401"] # generated code; ignore long lines & unused imports

[tool.ruff.lint.isort]
known-first-party = ["config", "shared"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---------------------------------------------------------------------------
# Testing — pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files  = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-n=auto",
]
markers = [
    "unit: Unit tests — no database access",
    "integration: Integration tests — requires database",
    "slow: Slow running tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage — pytest-cov / coverage.py
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    ".venv/*",
    "config/wsgi.py",
    "config/asgi.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
